Completed example webpage with SD support FATFS long name fix, ws, post control, json

--- a/examples/full/webpage/control.html
+++ b/examples/full/webpage/control.html
@@ -26,8 +26,8 @@
         <input type="range" id="slider" name="slider" min="0" max="100" value="50" oninput="document.getElementById('brightnessValue').innerText = this.value">
       </div>
       <div class="text-input-group">
-        <label for="deviceName">Device Name:</label>
-        <input type="text" id="deviceName" name="deviceName" value="ESP32 Device" required>
+        <label for="text">Text:</label>
+        <input type="text" id="text" name="text" value="ESP32 Device" required>
       </div>
       <button type="submit">Submit</button>
     </form>
