--- a/src/captive.html
+++ b/src/captive.html
@@ -59,17 +59,18 @@
     const g=id=>document.getElementById(id);
     function toggle(id,show){g(id).style.display=show?'block':'none'}
     function updateAuthmode(sel){
-      const pwd=g('password_field'),ent=g('enterpriseWarn'),btn=g('saveBtn'),auth=g('authmode');
-      if(!sel.options||!sel.options[sel.selectedIndex]||!sel.options[sel.selectedIndex].getAttribute('data-authmode')){
-        pwd.style.display='block';ent.style.display='none';auth.value='';btn.disabled=false;
+      const pwd=g('password'),pwdfld=g('password_field'),ent=g('enterpriseWarn'),btn=g('saveBtn'),auth=g('authmode');
+      if(!sel||!sel.options||!sel.options[sel.selectedIndex]||!sel.options[sel.selectedIndex].getAttribute('data-authmode')){
+        pwdfld.style.display='block';ent.style.display='none';auth.value='';
+        pwd.disabled=true;btn.disabled=true;
         console.warn('updateAuthmode: no valid selection');
         return;
       }
       const mode=+sel.options[sel.selectedIndex].getAttribute('data-authmode');
       console.log('updateAuthmode: mode='+mode+', ssid='+sel.value);
-      if(mode===0){pwd.style.display='none';ent.style.display='none';auth.value=0;btn.disabled=false}
-      else if(mode===2){pwd.style.display='none';ent.style.display='block';auth.value=2;btn.disabled=true}
-      else{pwd.style.display='block';ent.style.display='none';auth.value=1;btn.disabled=false}
+      if(mode===0){pwdfld.style.display='none';ent.style.display='none';auth.value=0;pwd.disabled=true;btn.disabled=false}
+      else if(mode===2){pwdfld.style.display='none';ent.style.display='block';auth.value=2;pwd.disabled=true;btn.disabled=true}
+      else{pwdfld.style.display='block';ent.style.display='none';auth.value=1;pwd.disabled=false;btn.disabled=false}
     }
     function populateSSIDs(aps,sel,auth){
       console.log('populateSSIDs: '+aps.length+' APs, looking for ssid='+sel+', auth='+auth);
@@ -133,6 +134,8 @@
             i.type='text';i.id='ssid';i.name='ssid';i.value=sel||'';i.placeholder='Enter SSID';i.required=false;
             s.parentNode.replaceChild(i,s);
           }
+          g('password').disabled=true;
+          g('saveBtn').disabled=true;
           g('saveBtn').textContent='Save (no SSID available)';
           g('scanWarn').style.display='block';
         });
@@ -154,10 +157,16 @@
           g('service_name').value=c.service_name||'';
           toggle('mdns_fields',c.use_mDNS);
         })
-        .catch(e=>{console.error('loadSettings: failed - '+e);g('dataWarn').style.display='block'});
+        .catch(e=>{
+          console.error('loadSettings: failed - '+e);
+          g('dataWarn').style.display='block';
+          g('password').disabled=true;
+          g('saveBtn').disabled=true;
+          getSSIDs('','');
+        });
     }
-    g('refreshBtn').onclick=()=>{console.log('Refresh button clicked');loadSettings();getSSIDs(g('ssid').value)};
-    window.onload=loadSettings;
+    g('refreshBtn').onclick=()=>{console.log('Refresh button clicked');loadSettings()};
+    window.onload=()=>{updateAuthmode(g('ssid'));loadSettings()};
   </script>
 </body>
 </html>
