--- a/src/captive.html
+++ b/src/captive.html
@@ -21,6 +21,7 @@
 </head>
 <body>
   <h2>ESP32 Captive Portal Setup</h2>
+  <a href="/captive">Refresh</a> | <a href="/restart">Restart Device</a> | <a href="/">Home</a>
   <form method="POST" action="/captive">
     <div id="dataWarn" class="warning red">⚠️ Failed to load settings. Please check your connection.</div>
     <div class="section">
