--- a/src/captive.html
+++ b/src/captive.html
@@ -89,6 +89,13 @@
     }
     function updateAuthmode(sel){
       const pwd=g('password'),pwdfld=g('password_field'),ent=g('enterpriseWarn'),btn=g('saveBtn'),auth=g('authmode');
+      if(sel.type.toLowerCase()==='input'){
+        // Manual SSID entry, assume WPA/WPA2
+        console.log('updateAuthmode: manual SSID entry, assuming WPA/WPA2');
+        pwdfld.style.display='block';ent.style.display='none';
+        pwd.disabled=false;btn.disabled=false;
+        return;
+      }
       if(!sel||!sel.options||!sel.options[sel.selectedIndex]||!sel.options[sel.selectedIndex].getAttribute('data-authmode')){
         pwdfld.style.display='block';ent.style.display='none';auth.value='';
         pwd.disabled=true;btn.disabled=true;
